--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id="navcontainer">
 <ul>
 <li> <a href="mailto:harrisonleehadaway@gmail.com?Subject=Hello%20" target="_top">Email</a> </li>
-<li><a href="https://github.com/harrisonhadaway/harrisonhadaway.github.io">GitHub</a></li>
+<li><a href="https://github.com/harrisonhadaway">GitHub</a></li>
 <li><a href="https://www.linkedin.com/in/harrisonhadaway/">LinkedIn</a></li>
 <li><a href="https://stackoverflow.com/users/8492389/harrison-hadaway">stackoverflow</a></li>
 
