--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<link  href="styles.css" type="text/css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
-	<title>About a Legend</title>
-</head>
-<body>
-<h1>About Harrison</h1>
+---
+layout: default
+title: Harrison's Personal Blog 
+---
+
+<h1>{{ page.title }}</h1>
 <p>Hello world, I am Harrison Hadaway.<br> I am currently attending Coding Bootcamp at Awesome Inc U.<br> I recently relocated from Oxford, MS to Lexignton, KY. <br>I enjoy exploring this world we live in and meeting new people. </p>
 <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/14705832_10207249629860893_3755328112905505590_n.jpg?oh=7aff545f31dafaa377993f5c492e639f&oe=5A1807C7">
 
-<h3>Contact Harrison</h3>
-	<div id="navcontainer">
 <ul>
-<li> <a href="mailto:harrisonleehadaway@gmail.com?Subject=Hello%20" target="_top">Email</a> </li>
-<li><a href="https://github.com/harrisonhadaway">GitHub</a></li>
-<li><a href="https://www.linkedin.com/in/harrisonhadaway/">LinkedIn</a></li>
-<li><a href="https://stackoverflow.com/users/8492389/harrison-hadaway">stackoverflow</a></li>
-
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
 </ul>
-</div>
-</body>
-</html>
